style.css
*{
  max-width: 100vw;
}

.bg-img{
  background-image: url(https://www.123freevectors.com/wp-content/original/113997-light-blue-diagonal-stripes-background-vector.jpg);
}

.flex-container {
  display: flex;
}

@media all and (min-width: 768px) {
  .me {order: 2;}
  .wcb {order: 1;}
}

.but {
  border-radius: 8px;
  background-color: darkgray;
  width: 12rem;
  height: 2rem;
}

.column {
  flex-direction: column;
justify-content: flex-end;
}

.pics {
  border-radius: 50%;
}

.image-row {
  display: flex;
  justify-content: center;
  border-bottom: solid 2px black;
  background-color: darkgray;
}

.flex-end {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.bottom {
  margin-bottom: 5rem;
}

.top {
  margin-top: 5rem;
}

.left {
  padding-left: 5rem;
  padding-right: 5rem;
}

.center{
  justify-content: center;
}

footer {
  background-color: rgb(99, 71, 226);
}

